[gd_scene load_steps=26 format=3 uid="uid://2qgubg3tulaw"]

[ext_resource type="Script" uid="uid://bvuscnxrw3i4h" path="res://Scenes/scene_17.gd" id="1_8le5o"]
[ext_resource type="Texture2D" uid="uid://ci7x6ddruvvrf" path="res://graphics/richRoom2.png" id="2_myjlk"]
[ext_resource type="Texture2D" uid="uid://c36juflptpa0d" path="res://graphics/32x32 sprites/32x32_table_wcloth.png" id="3_315d0"]
[ext_resource type="PackedScene" uid="uid://dejs7fyatuaui" path="res://Scenes/Bear.tscn" id="4_fecst"]
[ext_resource type="Texture2D" uid="uid://dj2uvtn3d4w2q" path="res://graphics/32x32 sprites/32x32_wardrobe.png" id="5_ob88i"]
[ext_resource type="Texture2D" uid="uid://bag0v3upbna28" path="res://graphics/32x32 sprites/32x32_chair03_purple.png" id="6_k2w2x"]
[ext_resource type="Texture2D" uid="uid://dqgfguc75b8bs" path="res://graphics/32x32 sprites/32x32_chair02_purple.png" id="7_152bt"]
[ext_resource type="Texture2D" uid="uid://bd33x5l78lle1" path="res://graphics/32x32 sprites/16x32_pottedplant_beige.png" id="8_tdyu4"]
[ext_resource type="Texture2D" uid="uid://bfs53yjrtkity" path="res://graphics/32x32 sprites/16x32_pendulumclock.png" id="9_o1ays"]
[ext_resource type="PackedScene" uid="uid://dejv3icwt1vif" path="res://Scenes/richBirdReal.tscn" id="12_8le5o"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_vhyak"]
size = Vector2(55, 642)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ikx7c"]
size = Vector2(188.5, 82)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_rxido"]
size = Vector2(80, 102)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_8fr0d"]
size = Vector2(20, 16.7368)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_6q5j1"]
size = Vector2(22.4, 7.69621)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ehn6b"]
size = Vector2(8.11111, 9.00748)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_l61v4"]
size = Vector2(8.28572, 9.5)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_341ni"]
size = Vector2(6.17648, 16.5556)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_shts8"]
size = Vector2(9.02438, 10.7191)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_g2ok2"]
size = Vector2(373, 181)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_h1axl"]
radius = 17.0
height = 50.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_ic8bx"]
radius = 15.0
height = 80.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_8fr0d"]
radius = 26.0
height = 90.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_6q5j1"]
radius = 20.0
height = 56.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_ehn6b"]
radius = 35.0
height = 70.0

[node name="Node2D" type="Node2D"]
script = ExtResource("1_8le5o")

[node name="RichRoom2" type="Sprite2D" parent="."]
position = Vector2(214, 244)
texture = ExtResource("2_myjlk")

[node name="borders" type="Node" parent="."]

[node name="StaticBody2D" type="StaticBody2D" parent="borders"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="borders/StaticBody2D"]
position = Vector2(434.5, 418)
shape = SubResource("RectangleShape2D_vhyak")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="borders/StaticBody2D"]
position = Vector2(1, 419)
shape = SubResource("RectangleShape2D_vhyak")

[node name="CollisionShape2D3" type="CollisionShape2D" parent="borders/StaticBody2D"]
position = Vector2(346, 769)
shape = SubResource("RectangleShape2D_ikx7c")

[node name="CollisionShape2D7" type="CollisionShape2D" parent="borders/StaticBody2D"]
position = Vector2(211, 766)
shape = SubResource("RectangleShape2D_ikx7c")

[node name="CollisionShape2D8" type="CollisionShape2D" parent="borders/StaticBody2D"]
position = Vector2(216, 229)
shape = SubResource("RectangleShape2D_rxido")

[node name="CollisionShape2D4" type="CollisionShape2D" parent="borders/StaticBody2D"]
position = Vector2(58, 766)
shape = SubResource("RectangleShape2D_ikx7c")

[node name="CollisionShape2D5" type="CollisionShape2D" parent="borders/StaticBody2D"]
position = Vector2(372, 76)
shape = SubResource("RectangleShape2D_ikx7c")

[node name="CollisionShape2D6" type="CollisionShape2D" parent="borders/StaticBody2D"]
position = Vector2(79, 76)
shape = SubResource("RectangleShape2D_ikx7c")

[node name="32x32TableWcloth" type="Sprite2D" parent="."]
position = Vector2(133, 285)
scale = Vector2(1.8125, 1.78125)
texture = ExtResource("3_315d0")

[node name="StaticBody2D" type="StaticBody2D" parent="32x32TableWcloth"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="32x32TableWcloth/StaticBody2D"]
position = Vector2(-0.551727, -5)
shape = SubResource("RectangleShape2D_8fr0d")

[node name="CharacterBody2D" parent="." instance=ExtResource("4_fecst")]
position = Vector2(222, 681)
scale = Vector2(1, 1)

[node name="Camera2D" type="Camera2D" parent="CharacterBody2D"]
zoom = Vector2(3, 3)
limit_left = 0
limit_top = 0
limit_right = 435
limit_bottom = 740
editor_draw_limits = true

[node name="32x32Wardrobe" type="Sprite2D" parent="."]
position = Vector2(110, 412)
scale = Vector2(1.875, 2.46875)
texture = ExtResource("5_ob88i")

[node name="StaticBody2D" type="StaticBody2D" parent="32x32Wardrobe"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="32x32Wardrobe/StaticBody2D"]
position = Vector2(-3.43323e-05, 11.5443)
shape = SubResource("RectangleShape2D_6q5j1")

[node name="32x32Chair03Purple" type="Sprite2D" parent="."]
position = Vector2(303.5, 634.5)
scale = Vector2(1.6875, 2.09375)
texture = ExtResource("6_k2w2x")

[node name="StaticBody2D" type="StaticBody2D" parent="32x32Chair03Purple"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="32x32Chair03Purple/StaticBody2D"]
position = Vector2(-0.296297, 10.7463)
shape = SubResource("RectangleShape2D_ehn6b")

[node name="32x32Chair02Purple" type="Sprite2D" parent="."]
position = Vector2(110, 635)
scale = Vector2(1.75, 2)
texture = ExtResource("7_152bt")

[node name="StaticBody2D" type="StaticBody2D" parent="32x32Chair02Purple"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="32x32Chair02Purple/StaticBody2D"]
position = Vector2(-3.8147e-06, 10.75)
shape = SubResource("RectangleShape2D_l61v4")

[node name="16x32PottedplantBeige" type="Sprite2D" parent="."]
position = Vector2(291, 262)
scale = Vector2(2.125, 1.6875)
texture = ExtResource("8_tdyu4")

[node name="StaticBody2D" type="StaticBody2D" parent="16x32PottedplantBeige"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="16x32PottedplantBeige/StaticBody2D"]
position = Vector2(3.57628e-06, 8.29629)
shape = SubResource("RectangleShape2D_341ni")

[node name="16x32Pendulumclock" type="Sprite2D" parent="."]
position = Vector2(325.5, 489.5)
scale = Vector2(2.5625, 2.78125)
texture = ExtResource("9_o1ays")

[node name="StaticBody2D" type="StaticBody2D" parent="16x32Pendulumclock"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="16x32Pendulumclock/StaticBody2D"]
position = Vector2(0.195122, 9.13483)
shape = SubResource("RectangleShape2D_shts8")

[node name="Node2D" parent="." instance=ExtResource("12_8le5o")]
position = Vector2(204, 604)

[node name="kill" type="Area2D" parent="Node2D"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Node2D/kill"]
position = Vector2(13.5, -108.5)
shape = SubResource("RectangleShape2D_g2ok2")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Node2D/kill"]
position = Vector2(12, 97)
shape = SubResource("RectangleShape2D_g2ok2")

[node name="killTimer" type="Timer" parent="Node2D/kill"]
wait_time = 0.6

[node name="hdie" type="Node" parent="."]

[node name="hideColl" type="Area2D" parent="hdie"]
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="hdie/hideColl"]
position = Vector2(312, 642)
shape = SubResource("CapsuleShape2D_h1axl")

[node name="CollisionShape2D4" type="CollisionShape2D" parent="hdie/hideColl"]
position = Vector2(334, 492)
shape = SubResource("CapsuleShape2D_ic8bx")

[node name="CollisionShape2D5" type="CollisionShape2D" parent="hdie/hideColl"]
position = Vector2(89, 416)
shape = SubResource("CapsuleShape2D_8fr0d")

[node name="CollisionShape2D8" type="CollisionShape2D" parent="hdie/hideColl"]
position = Vector2(292, 265)
shape = SubResource("CapsuleShape2D_6q5j1")

[node name="CollisionShape2D9" type="CollisionShape2D" parent="hdie/hideColl"]
position = Vector2(132, 288)
shape = SubResource("CapsuleShape2D_ehn6b")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="hdie/hideColl"]
position = Vector2(97, 644)
shape = SubResource("CapsuleShape2D_h1axl")

[connection signal="body_entered" from="Node2D/kill" to="." method="_on_kill_body_entered"]
[connection signal="body_exited" from="Node2D/kill" to="." method="_on_kill_body_exited"]
[connection signal="timeout" from="Node2D/kill/killTimer" to="." method="_on_kill_timer_timeout"]
[connection signal="body_entered" from="hdie/hideColl" to="." method="_on_hide_coll_body_entered"]
[connection signal="body_exited" from="hdie/hideColl" to="." method="_on_hide_coll_body_exited"]
